# DjangoAPI

./: .gitignore  Containerfile  Makefile  README.md  flake.nix  ignore.txt  mkPoetryEnv.nix  pod-and-containers.yaml  poetry2nixOCIImage.nix  pyproject.toml
django_api/: asgi.py  settings.py  urls.py  wsgi.py
nix-src/: install-django-api.nix  install-django-api.sh
