[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | venv
    | env
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.poetry]
name = "DjangoAPI"
version = "0.0.0"
description = "Um projeto legal para estudar"
authors = ["Imobanco"]
readme = "README.md"
packages = [{include = "**/*.py"}]

[tool.poetry.dependencies]
python = "^3.8"

# Django + DRF
django="4.0.*"
psycopg2-binary = "^2.9.3"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
black = "^21.6b0"
isort = "^5.9.2"


[tool.poetry.scripts]
django_api = "manage:main"
# poetry config --list
[virtualenvs]
virtualenvs.create = true
virtualenvs.in-project = true
virtualenvs.path = "."

